@startuml
skinparam classAttributeIconSize 0

class ViewTestResultUI {
}

class ViewTestResultController {
+getClientByEmail()
+showClientTestsValidatedAndOrderedByRegistrationDate()
+showTestSelected(nhsCode)
+showTestResultsAndReport()
}

class Company {
+getClientStore()
+getTestStore()
}

class ClientStore {
+getClientByEmail()
}

class TestStore {
+getClientTestsValidatedAndOrderedByRegistrationDate()
+getTestByNhsCode(nhsCode)
}

class ClinicalTest {
+getTestResults()
+getReportText()
}

class Report {
+getReportText()
}


class Email {
+getEmail()
}

class UserSession {
+getUserId()
}

class AuthFacade {
+getCurrentSession()
}

ViewTestResultUI ..> ViewTestResultController
ViewTestResultController ..> Company
ViewTestResultController ..> ClientStore
ViewTestResultController ..> TestStore
ViewTestResultController ..>  ClinicalTest


Company"1" -> "1"ClientStore : uses
Company"1" -> "1"TestStore : uses
ClientStore ..> AuthFacade
ClientStore ..> UserSession
ClientStore ..> Email
ClinicalTest ..> Report: knows

@enduml
